Q&A report #4955 - Options menus - missing options.

--- a/app/src/main/res/layout-v21/sliding_options_panel.xml
+++ b/app/src/main/res/layout-v21/sliding_options_panel.xml
@@ -63,10 +63,10 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/general_download"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -91,9 +91,9 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -118,9 +118,38 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:layout_marginLeft="10dp"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/file_list_option_remove_link_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:visibility="gone"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/file_list_option_remove_link"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/ic_remove_link" />
+
+            <TextView
+                android:id="@+id/file_list_option_remove_link_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
+                android:text="@string/context_remove_link_menu"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -145,10 +174,10 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/context_share_folder"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -173,10 +202,10 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/file_properties_shared_folder_select_contact"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -201,37 +230,10 @@
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
                 android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/context_clean_shares_menu"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
-        </LinearLayout>
-
-        <LinearLayout
-            android:id="@+id/file_list_option_delete_layout"
-            android:layout_width="match_parent"
-            android:layout_height="wrap_content"
-            android:gravity="center_vertical"
-            android:orientation="horizontal" >
-
-            <ImageView
-                android:id="@+id/file_list_option_delete"
-                style="@style/dialogActionButton"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2dp"
-                android:paddingTop="2dp"
-                android:src="@drawable/ic_rubbish_bin" />
-
-            <TextView
-                android:id="@+id/file_list_option_delete_text"
-                android:layout_width="wrap_content"
-                android:layout_height="wrap_content"
-                android:paddingBottom="2dp"
-                android:text="@string/section_rubbish_bin"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -255,10 +257,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/context_leave_menu"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -282,10 +285,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/context_send_file_inbox"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -309,10 +313,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/context_rename"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -336,10 +341,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/general_move_to"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -364,10 +370,39 @@
                 android:layout_height="wrap_content"
                 android:gravity="center_vertical"
                 android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/context_copy"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
+        </LinearLayout>
+
+        <LinearLayout
+            android:id="@+id/file_list_option_delete_layout"
+            android:layout_width="match_parent"
+            android:layout_height="wrap_content"
+            android:gravity="center_vertical"
+            android:orientation="horizontal" >
+
+            <ImageView
+                android:id="@+id/file_list_option_delete"
+                style="@style/dialogActionButton"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:src="@drawable/ic_rubbish_bin" />
+
+            <TextView
+                android:id="@+id/file_list_option_delete_text"
+                android:layout_width="wrap_content"
+                android:layout_height="wrap_content"
+                android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
+                android:text="@string/context_move_to_trash"
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -391,10 +426,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/context_delete"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
 
         <LinearLayout
@@ -418,10 +454,11 @@
                 android:layout_width="wrap_content"
                 android:layout_height="wrap_content"
                 android:paddingBottom="2dp"
+                android:paddingTop="2dp"
+                android:layout_marginLeft="10dp"
                 android:text="@string/search_open_location"
-                android:textColor="@color/black"
-                android:textSize="14sp"
-                android:textStyle="bold" />
+                android:textColor="@color/name_my_account"
+                android:textSize="16sp"/>
         </LinearLayout>
     </LinearLayout>
 </mega.privacy.android.app.components.SlidingUpPanelLayout>
