--- a/app/src/main/res/layout-v21/activity_file_contact_list.xml
+++ b/app/src/main/res/layout-v21/activity_file_contact_list.xml
@@ -2,12 +2,11 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     xmlns:app="http://schemas.android.com/apk/res-auto"
-    xmlns:rounded="http://schemas.android.com/apk/res-auto"
     android:id="@+id/file_contact_list"
     android:background="@color/white"
     android:fitsSystemWindows="true"
     android:layout_width="fill_parent"
-    android:layout_height="fill_parent" >
+    android:layout_height="fill_parent">
 
     <android.support.v7.widget.Toolbar
         android:id="@+id/toolbar_file_contact_list"
@@ -146,10 +145,10 @@
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
                     android:paddingTop="2dp"
+                    android:layout_marginLeft="10dp"
                     android:text="@string/file_properties_shared_folder_change_permissions"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/name_my_account"
+                    android:textSize="16sp"/>
             </LinearLayout>
 
             <LinearLayout
@@ -173,10 +172,11 @@
                     android:layout_width="wrap_content"
                     android:layout_height="wrap_content"
                     android:paddingBottom="2dp"
+                    android:paddingTop="2dp"
+                    android:layout_marginLeft="10dp"
                     android:text="@string/context_delete"
-                    android:textColor="@color/black"
-                    android:textSize="14sp"
-                    android:textStyle="bold" />
+                    android:textColor="@color/name_my_account"
+                    android:textSize="16sp"/>
             </LinearLayout>
         </LinearLayout>
     </mega.privacy.android.app.components.SlidingUpPanelLayout>
