--- a/app/src/main/res/layout-v21/fragment_filebrowsergrid.xml
+++ b/app/src/main/res/layout-v21/fragment_filebrowsergrid.xml
@@ -2,6 +2,7 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
+    android:id="@+id/fragment_container_file_browser_grid"
     android:background="@color/new_background_fragment"
     tools:context=".FileBrowserGridFragment" >
 
