--- a/app/src/main/res/layout-v21/item_photo_sync_grid.xml
+++ b/app/src/main/res/layout-v21/item_photo_sync_grid.xml
@@ -10,21 +10,20 @@
   	
     <RelativeLayout
 	    android:layout_width="match_parent"
-	    android:layout_height="wrap_content"
+	    android:layout_height="40dp"
 	    android:descendantFocusability="blocksDescendants"
 	    android:id="@+id/cell_photosync_grid_month_layout" 
 	    android:background="@color/white"
-	    android:layout_marginLeft="72dp"
 	    android:layout_gravity="left" >
 	    
     	<TextView
 	        android:id="@+id/cell_photosync_grid_month_name"
 	        android:layout_width="match_parent"
 	        android:layout_height="wrap_content"
-	        android:singleLine="false" 
-	        android:textColor="@color/photo_sync_month_text"
-	        android:textSize="14sp"
-	        android:textStyle="bold"/>
-    
+	        android:singleLine="false"
+			android:layout_centerVertical="true"
+	        android:textColor="@color/mail_my_account"
+			android:layout_marginLeft="60dp"
+	        android:textSize="14sp"/>
 	</RelativeLayout>
 </LinearLayout>
