--- a/app/src/main/res/layout-v21/activity_pin_lock.xml
+++ b/app/src/main/res/layout-v21/activity_pin_lock.xml
@@ -36,7 +36,7 @@
         android:gravity="center_horizontal"
         android:orientation="horizontal" >
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/pass_first"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -45,7 +45,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/pass_second"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -54,7 +54,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/pass_third"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -63,7 +63,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/pass_fourth"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -83,7 +83,7 @@
         android:orientation="horizontal" 
         android:visibility="gone">
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/six_pass_first"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -92,7 +92,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/six_pass_second"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -101,7 +101,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/six_pass_third"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -110,7 +110,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
         
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/six_pass_fourth"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -119,7 +119,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/six_pass_fifth"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
@@ -128,7 +128,7 @@
             android:inputType="numberPassword"
             android:maxLength="1" />
 
-        <EditText
+        <mega.privacy.android.app.components.EditTextPIN
             android:id="@+id/six_pass_sixth"
             android:layout_width="fill_parent"
             android:layout_height="fill_parent"
