--- a/app/src/main/res/layout-v21/fragment_rubbishbinlist.xml
+++ b/app/src/main/res/layout-v21/fragment_rubbishbinlist.xml
@@ -55,7 +55,9 @@
 	    android:id="@+id/rubbishbin_list_empty_image"
 	    android:layout_width="wrap_content"
 	    android:layout_height="wrap_content"
-	    android:layout_centerInParent="true" />
+		android:layout_centerHorizontal="true"
+		android:layout_marginTop="100dp"
+		android:gravity="center_horizontal" />
     
     <TextView
 	    android:id="@+id/rubbishbin_list_empty_text"
