--- a/app/src/main/res/menu/file_contact_shared_browser_action.xml
+++ b/app/src/main/res/menu/file_contact_shared_browser_action.xml
@@ -1,28 +1,28 @@
 <menu xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:MEGA="http://schemas.android.com/apk/res-auto" >
+	xmlns:MEGA="http://schemas.android.com/apk/res-auto">
     
    <item
         android:id="@+id/cab_menu_select_all"
         android:orderInCategory="110"
         android:title="@string/action_select_all"
-        android:showAsAction="never" />   
+	   	MEGA:showAsAction="never" />
         
    <item
         android:id="@+id/cab_menu_unselect_all"
         android:orderInCategory="110"
         android:title="@string/action_unselect_all"
-        android:showAsAction="never" />      
+	   	MEGA:showAsAction="never" />
     
     <item
 	    android:id="@+id/action_file_contact_list_permissions"
 	    android:orderInCategory="115"
 	    android:title="@string/file_properties_shared_folder_change_permissions"
-	    android:showAsAction="never" />
+		MEGA:showAsAction="never" />
 	
 	<item
 	    android:id="@+id/action_file_contact_list_delete"
 	    android:orderInCategory="120"
 	    android:title="@string/context_remove"
-	    android:showAsAction="never" />	
+		MEGA:showAsAction="never" />
 	
 </menu>
